# scrapy-spider-metadata

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  README.rst  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.rst  metadata.rst  params.rst  requirements.txt
scrapy_spider_metadata/: __init__.py  _metadata.py  _params.py  _utils.py  utils.py
tests/: __init__.py  test_metadata.py  test_params.py  test_utils.py
tests_typing/: test_params.mypy-testing
